corrected menu on mobile

--- a/src/scss/mixin-common.scss
+++ b/src/scss/mixin-common.scss
@@ -132,6 +132,10 @@
         justify-content: center;
         flex-flow: column;
 
+        @media only screen and (max-width: 420px) {
+            height: calc(100vh - 60px);
+        }
+
         &>li {
             width: 100%;
             height: 50px;
